--- a/cutlass-sdk/sdk-includes/templates/aspect-template/index.html
+++ b/cutlass-sdk/sdk-includes/templates/aspect-template/index.html
@@ -6,13 +6,24 @@
 		<title>My Application</title>
 		
 		<@css.bundle theme="standard"@/>
-		<@js.bundle@/>
 		
-		<script>
-			var oApp = new @appns.App();
-		</script>
 	</head>
 	<body>
 		@SUCCESS.MESSAGE.JNDI.TOKEN@
+
+		<@js.bundle@/>
+		<script>
+			( function() {
+
+				caplin.thirdparty('br-caplin');
+
+				var ServiceRegistry = require( 'br/ServiceRegistry' );
+				var DemoEventHub = require( 'br/DemoEventHub' );
+				ServiceRegistry.registerService( 'demo-event-hub', new DemoEventHub() );
+			
+				var oApp = new @appns.App();
+				
+			} )();
+		</script>
 	</body>
 </html>
