--- a/cutlass-sdk/sdk-includes/templates/workbench-template/index.html
+++ b/cutlass-sdk/sdk-includes/templates/workbench-template/index.html
@@ -7,28 +7,22 @@
 		<@js.bundle@/>
 		
 		<script type="text/javascript">
-			caplin.thirdparty('br-caplin');
-
+			br.thirdparty('br-caplin');
+			
 			var ServiceRegistry = require( 'br/ServiceRegistry' );
 			var DemoEventHub = require( 'br/DemoEventHub' );
 			ServiceRegistry.registerService( 'demo-event-hub', new DemoEventHub() );
-
-			var oWorkbench;
 			
-			function initialize()
-			{
-				oWorkbench = new caplin.workbench.ui.Workbench(250, 310);
+			function initialize() {
+				var workbench = new br.workbench.Workbench(250, 310);
+				var workbenchController = new @appns.@bladeset.@blade.workbench.WorkbenchController(200, 100);
+				var presentationModel = workbenchController.getPresentationModel();
+				var presentationModelViewer = new br.presenter.workbench.PresentationModelViewer(presentationModel);
 				
-				var oApplication = new @appns.@bladeset.@blade.workbench.ExampleBladeApplication(200, 100);
-				var oPresentationModel = oApplication.getPresentationModel();
-				var oWorkbenchEventLogger = new caplin.workbench.ui.WorkbenchEventLogger([oPresentationModel]);
-				var oPresentationModelViewer = new caplin.presenter.workbench.ui.PresentationModelViewer(oPresentationModel);
+				workbench.addToRightWing(presentationModelViewer, "Visualise Presentation Model", true);
 				
-				oWorkbench.addToLeftWing(oWorkbenchEventLogger, "Messages");
-				oWorkbench.addToRightWing(oPresentationModelViewer, "Visualise Presentation Model", true);
-				
-				document.body.appendChild(oApplication.getElement());
-				oWorkbench.center(oApplication.getElement());
+				document.body.appendChild(workbenchController.getElement());
+				workbench.center(workbenchController.getElement());
 			}
 		</script>
 	</head>
