cleaning up the use of the build version calculator and making it a static utility

--- a/cutlass-libraries/jsdoc-templates/Caplin/allclasses.tmpl
+++ b/cutlass-libraries/jsdoc-templates/Caplin/allclasses.tmpl
@@ -2,7 +2,7 @@
 <div>
 	{+new Link().toFile("index.html").withText("Home")+} | {+new Link().toFile("classesindex.html").withText("Class Index")+} <br>
 	<div id="sdk_info_panel">
-		<p>SDK Version: <span id="sdk_version">@majorVersion@-@minorVersion@ </span></p>
+		<p>SDK Version: <span id="sdk_version">@buildVersion@ </span></p>
 		<p>Documentation generated on <span id="sdk_generation_date">@buildDate@</span></p>
 	</div>
 </div>
