removing references to a database in all js, html and css in dashboard system app

--- a/cutlass-sdk/sdk-includes/jsdoc-templates/Caplin/index.tmpl
+++ b/cutlass-sdk/sdk-includes/jsdoc-templates/Caplin/index.tmpl
@@ -7,7 +7,7 @@
 <div id="api_content_wrapper" class="two-thirds">
 	<div id="api_content">
 		<div class="right-align">
-			<span class="resetDatabaseBtn">
+			<span class="refreshBtn">
 				<button class="round-button has-tooltip" onclick="generateDocs()">
 			   		<span class="button-image"></span>
 			       		<span class="tooltip">Build JsDoc</span>
