--- a/cutlass-sdk/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/app-box.css
+++ b/cutlass-sdk/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/app-box.css
@@ -172,7 +172,7 @@
 	background-image: url(img/docs-up.png);
 }
 
-.resetDatabaseBtn .button-image {
+.refreshBtn .button-image {
 	background-image: url(img/refresh-up.png);
 }
 
