ISSUE-143: Workbench templates - Changing button from 'Log me' -> 'Alert me' - Visualizer on rightWing is now expanded by default

--- a/cutlass-sdk/sdk-includes/templates/workbench-template/index.html
+++ b/cutlass-sdk/sdk-includes/templates/workbench-template/index.html
@@ -13,7 +13,7 @@
 				var component = new br.presenter.component.PresenterComponent("@appns.@bladeset.@blade.view-template", model);
 				var presentationModelViewer = new br.presenter.workbench.ui.PresentationModelViewer(model);
 				
-				workbench.addToRightWing(presentationModelViewer, "Visualise Presentation Model", true);
+				workbench.addToRightWing(presentationModelViewer, "Visualise Presentation Model", false);
 				workbench.displayComponent(component, 200, 100);
 			}
 		</script>
