--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/splash-screen.css
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/splash-screen.css
@@ -35,7 +35,7 @@
 	z-index: 150;
 	position: relative;
 	top: 20px;
-	height: 440px;
+	height: 500px;
 	width: 896px;
 	margin-left: auto;
 	margin-right: auto;
@@ -56,17 +56,16 @@
     font-weight: normal;
 }
 
-#vid {
-	-moz-box-shadow:0px 4px 22px 2px #777777;
-	-webkit-box-shadow:0px 4px 22px 2px #777777;
-	box-shadow:0px 4px 22px 2px #777777;
-}
-
 .tour h1 {
 	padding: 23px 0px 0px 47px;
 	font-size: 30px;
 	font-weight: normal;
 	margin: 0px 0px -5px 0px;
+}
+
+.tour h3 {
+	font-size: 90%;
+	color: #5F5F5F;
 }
 
 .tour #section-left {
@@ -81,7 +80,12 @@
 	width: 35%;
 }
 
-.tour #learn {
+.tour #section-right h2 {
+	margin-bottom: 9px;
+}
+
+.tour #learn,
+.tour .learn {
 	padding-left: 39px;
 	background: url(img/splash-learn-icon.png) no-repeat;
 }
