--- a/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/html/view.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/html/view.html
@@ -1,4 +1,4 @@
 <div id="@appns.@bladeset.@blade.view-template">
 	<div class="hello-world-message" data-bind="text:message"></div>
-	<button class="button" data-bind="click:buttonClicked">Alert me</button>
+	<button class="button" data-bind="click:buttonClicked">Log me</button>
 </div>
