Updating styling for version info so that it fits on a single line

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/footer.css
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/footer.css
@@ -41,7 +41,8 @@
 	padding-top: 30px;
 	margin-right: 20px;
 	float: right;
-    width: 116px;
+    width: 135px;
+    text-align: right;
 }
 
 .footer-logo a:hover{
