#195 Pushing branch with changes to update BladeRunner -> BladeRunnerJS - When starting the app - All affected Java tests - License html files - Blade template to use br.thirdparty() instead of caplin.thirdparty()

--- a/cutlass-sdk/build-resources/includes/licenses/java.html
+++ b/cutlass-sdk/build-resources/includes/licenses/java.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	
-		<h3><a name="ThirdPartyProductsinCaplin-BladeRunner%26nbsp%3BJavaThirdPartyLibraries"></a>BladeRunner&nbsp; - Java Third Party Libraries</h3>
+		<h3><a name="ThirdPartyProductsinCaplin-BladeRunner%26nbsp%3BJavaThirdPartyLibraries"></a>BladeRunnerJS&nbsp; - Java Third Party Libraries</h3>
 
 		<table><tbody>
 		<tr>
