--- a/cutlass-sdk/build-resources/includes/licenses/javascript.html
+++ b/cutlass-sdk/build-resources/includes/licenses/javascript.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	
-		<h3><a name="ThirdPartyProductsinCaplin-BladeRunnerJavaScriptThirdPartyLibraries"></a>BladeRunner - JavaScript Third Party Libraries</h3>
+		<h3><a name="ThirdPartyProductsinCaplin-BladeRunnerJavaScriptThirdPartyLibraries"></a>BladeRunnerJS - JavaScript Third Party Libraries</h3>
 
 		<table><tbody>
 		<tr>
