Start using the new js bundler everywhere, using the temporary new tag name -- we will switch back to the old name once we've deleted the old bundlers.

--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<p>Successfully loaded the application</p>
 
-		<@js.bundle@/>
+		<@new-js.bundle dev-minifier="combined"@/>
 		<script>
 			( function() {
 				var oApp = new @appns.App();
