--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -15,9 +15,9 @@
 		<script>
 			( function() {
 
-				var App = require( '@appns.App' );
+				var App = require( '@appns/App' );
 				var app = new App();
-				
+
 			} )();
 		</script>
 	</body>
