<@js.bundle@/> can now once again be used instead of the temporary <@new-js.bundle@/> tag.

--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<p>Successfully loaded the application</p>
 
-		<@new-js.bundle dev-minifier="combined"@/>
+		<@js.bundle dev-minifier="combined"@/>
 		<script>
 			( function() {
 
