--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -4,7 +4,7 @@
 		<title>Workbench</title>
 		
 		<@css.bundle theme="standard"@/>
-		<@new-js.bundle dev-minifier="combined"@/>
+		<@js.bundle dev-minifier="combined"@/>
 		
 		<script type="text/javascript">
 			var Workbench = require( 'br/workbench.ui.Workbench' );
