--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -11,10 +11,14 @@
 	<body>
 		<p>Successfully loaded the application</p>
 
-        <!-- dev-minifier can be set to "combined" for all JS content to be bundled with a single request -->
+    <!-- dev-minifier can be set to "combined" for all JS content to be bundled with a single request -->
 		<@js.bundle dev-minifier="none" prod-minifier="combined"@/>
 		<script>
 			( function() {
+
+				var ServiceRegistry = require( 'br/ServiceRegistry' );
+				var EventHub = require( 'br/EventHub' );
+				ServiceRegistry.registerService( 'br.event-hub', new EventHub() );
 
 				var App = require( '@appns/App' );
 				var app = new App();
