improved workbench default * More structured JS * Uses the new EventHubViewer

--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -4,29 +4,53 @@
 		<title>Workbench</title>
 		
 		<@css.bundle theme="standard"@/>
-		<@js.bundle dev-minifier="none"@/>
+		
+	</head>
+	<body>
+
+		<@js.bundle @/>
 		
 		<script type="text/javascript">
 			var ServiceRegistry = require( 'br/ServiceRegistry' );
+
+			// Register application EventHub. Required until the following is fixed:
+			// https://github.com/BladeRunnerJS/brjs/issues/354
 			var EventHub = require( 'br/EventHub' );
 			ServiceRegistry.registerService( 'br.event-hub', new EventHub() );
 
+			var EventHubViewer = require( 'br/workbench/tools/EventHubViewer' );
 			var Workbench = require( 'br/workbench/ui/Workbench' );
-			var ExamplePresentationModel = require( '@appns/@bladeset/@blade/ExamplePresentationModel' );
-			var PresenterComponent = require( 'br/presenter/component/PresenterComponent' );
+			var KnockoutModelTree = require( 'br/knockout/workbench/KnockoutModelTree' );
 			var PresentationModelViewer = require( 'br/presenter/workbench/ui/PresentationModelViewer' );
+			var KnockoutComponent = require( 'br/knockout/KnockoutComponent' );
 
-			function initialize() {
-				var workbench = new Workbench(250, 310);
-				var model = new ExamplePresentationModel();
-				var component = new PresenterComponent("@appns.@bladeset.@blade.view-template", model);
-				var presentationModelViewer = new PresentationModelViewer(model);
-				
-				workbench.addToRightWing(presentationModelViewer, "Visualise Presentation Model", false);
-				workbench.displayComponent(component, 200, 100);
+			var eventHub = ServiceRegistry.getService( 'br.event-hub' );
+
+			// ViewModel that is being created in the workbench
+			var ExampleViewModel = require( '@appns/@bladeset/@blade/ExamplePresentationModel' );
+
+			function addEventHubLogger( eventHub, workbench ) {
+				var eventHubViewer = new EventHubViewer( eventHub );
+				workbench.addToLeftWing( eventHubViewer, "EventHub Logging", false );
 			}
+
+			function addModelViewer( model, workbench ) {
+				var presentationModelViewer = new PresentationModelViewer(model, KnockoutModelTree);
+				workbench.addToRightWing( presentationModelViewer, "Visualise Presentation Model", false);
+			}
+
+			function addComponent( component, workbench  ) {
+				workbench.displayComponent( component, 200, 100 );
+			}
+
+			var workbench = new Workbench(250, 310);
+			addEventHubLogger( eventHub, workbench );
+
+			var model = new ExampleViewModel();
+			var component = new KnockoutComponent( '@appns.@bladeset.@blade.view-template', model );
+
+			addComponent( component, workbench )
+			addModelViewer( model, workbench );
 		</script>
-	</head>
-	<body onload="initialize()">
 	</body>
 </html>
