Change title of workbench tool

--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -36,7 +36,7 @@
 
 			function addModelViewer( model, workbench ) {
 				var presentationModelViewer = new PresentationModelViewer(model, KnockoutModelTree);
-				workbench.addToRightWing( presentationModelViewer, "Visualise Presentation Model", false);
+				workbench.addToRightWing( presentationModelViewer, "Visualise Knockout View Model", false);
 			}
 
 			function addComponent( component, workbench  ) {
