--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/blades-box.css
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/themes/standard/blades-box.css
@@ -8,6 +8,7 @@
 	height: auto;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 10px;
 	border-style: solid;
 	border-width: 2px;
 	z-index: 1;
