--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<title>Workbench</title>
-		
+
 		<@css.bundle theme="standard"@/>
-		
+
 	</head>
 	<body>
 
 		<@js.bundle @/>
-		
+
 		<script type="text/javascript">
 			var ServiceRegistry = require( 'br/ServiceRegistry' );
 
@@ -36,10 +36,10 @@
 			addEventHubLogger( workbench );
 
 			// ViewModel that is being created in the workbench
-			var @class-nameViewModel = require( '@appns/@bladeset/@blade/@class-nameViewModel' );
+			var @bladeTitleViewModel = require( '@appns/@bladeset/@blade/@bladeTitleViewModel' );
 			var KnockoutComponent = require( 'br/knockout/KnockoutComponent' );
-			
-			var model = new @class-nameViewModel();
+
+			var model = new @bladeTitleViewModel();
 			var component = new KnockoutComponent( '@appns.@bladeset.@blade.view-template', model );
 
 			addComponent( component, workbench )
