--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<title>Workbench</title>
 
-		<@css.bundle theme="standard"@/>
+		<@css.bundle theme="black" alternateTheme="red" @/>
 
 	</head>
 	<body>
 
+		<@i18n.bundle @/>
 		<@js.bundle @/>
 
 		<script type="text/javascript">
