--- a/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/html/view.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/html/view.html
@@ -1,12 +1,11 @@
 <div id="@appns.@bladeset.@blade.view-template">
 	<div class="@bladeset-@blade-blade">
-		<h1 class="hello-world-message" data-bind="text:message"></h1>
-		<p>
-			HTML hello.world property:@{@appns.@bladeset.@blade.hello.world}
-		</p>
-		<p>
-			JS hello.world property: <span data-bind="text:helloWorldI18n"></span>
-		</p>
+		<h1 class="hello-world-message">
+			 @{@appns.@bladeset.@blade.hello.world}
+		</h1>
+		<p class="welcome-message" data-bind="text:welcomeMessage"></p>
+		<p>Try using alternative stylesheets to switch the theme.</p>
+		<p data-bind="text:buttonClickMessage"></p>
 		<button class="button" data-bind="click:buttonClicked">Say Hello!</button>
 	</div>
 </div>
