--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -5,11 +5,14 @@
 
 		<title>My Application</title>
 
-		<@css.bundle theme="standard"@/>
+		<@css.bundle theme="black" alternateTheme="red" @/>
 
 	</head>
 	<body>
-		<p>Successfully loaded the application</p>
+		<div class="app">
+			<h1 id="hello-world"></h1>
+			<p>Add any new code for your app to src/@appns/App.js</p>
+		</div>
 
 		<@i18n.bundle @/>
     	<!-- dev-minifier can be set to "combined" for all JS content to be bundled with a single request -->
