--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/themes/common/style.css
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/themes/common/style.css
@@ -1,3 +1,10 @@
 body {
-    background-color: #ccc;
+    background-color: #eee;
+}
+
+.app {
+    background-color:white;
+    max-width:500px;
+    margin:20px auto;
+    padding: 5px 20px;
 }
