--- a/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/themes/common/style.css
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/aspect-template/themes/common/style.css
@@ -8,3 +8,10 @@ body {
     margin:20px auto;
     padding: 5px 20px;
 }
+
+.br-logo {
+    text-align: center;
+}
+.br-logo img {
+    width:50px;
+}
