adding <meta charset="utf-8">

--- a/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Workbench</title>
+		
+		<meta charset="utf-8">
 
 		<@css.bundle theme="black" alternateTheme="red" @/>
 
