--- a/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/static/regenerateDocs.css
+++ b/brjs-core/jsdoc-resources/jsdoc-templates/Caplin/static/regenerateDocs.css
@@ -2,7 +2,7 @@
 	float: right;
 }
 
-.resetDatabaseBtn .button-image {
+.regeneratedDocsBtn .button-image {
 	background-image: url(refresh-up.png);
 }
 
