Changing in-line comment to be spread across multiple lines to be more readable

--- a/brjs-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
+++ b/brjs-sdk/build-resources/includes/sdk/templates/aspect-template/index.html
@@ -14,7 +14,10 @@
 			<h1 id="hello-world"></h1>
 			<p>Add any new code for your app to src/@appns/App.js</p>
 			<div class="br-logo">
-				<!-- 'unbundled-resources' can be used for any assets you don't want part of the BRJS bundling process. The bundle.path tag plugin should be used to generate a URL that contains the current app version so it will continue to work when the App is built for production. The bundlePath service can be used to do the equivalent via JavaScript. -->
+				<!-- 'unbundled-resources' can be used for any assets you don't want part of the BRJS bundling process.
+				The bundle.path tag plugin should be used to generate a URL that contains the current app version so it
+				will continue to work when the App is built for production.
+				The bundlePath service can be used to do the equivalent via JavaScript. -->
 				<img src="<@bundle.path@/>/unbundled-resources/br-logo.png" />
 			</div>
 		</div>
