using bootstrap for base styles

--- a/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/tmpl/layout.tmpl
+++ b/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/tmpl/layout.tmpl
@@ -10,16 +10,18 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
-    <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
+    <link type="text/css" rel="stylesheet" href="styles/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="styles/hosted-docs.css">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 
-<div id="main">
+<div id="main" class="col-md-push-3 col-md-9">
     <?js= content ?>
 </div>
 
-<nav>
+<nav class="col-md-pull-9 col-md-3">
     <?js= this.nav ?>
 </nav>
 
