--- a/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/static/styles/styles.css
+++ b/brjs-sdk/build-resources/includes/sdk/jsdoc-toolkit-resources/brjs-template/static/styles/styles.css
@@ -366,7 +366,7 @@ header .name {
 
 /** Left nav styling **/
 nav ul {
-    margin: 0;
+    margin: 0 0 0 2px;
     padding: 0;
     list-style-type: none;
 }
@@ -384,7 +384,8 @@ nav ul a {
 }
 #main article h3,
 #main article h4 {
-    margin-top: 30px;
+    font-size:20px;
+    margin-top: 34px;
 }
 #main article h5,
 #main article h6 {
@@ -438,9 +439,9 @@ table.params code {
     font-size: 30px;
 }
 
-.sdk_info_panel {
+#sdk_info_panel {
     font-size:0.8em;
 }
-.sdk_info_panel p {
+#sdk_info_panel p {
     margin: 2px 0;
 }
