--- a/brjs-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
+++ b/brjs-sdk/build-resources/includes/sdk/templates/workbench-template/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<@base.tag@/>
-		<title>Workbench</title>
+		<meta charset="UTF-8">
 		
-		<meta charset="utf-8">
+		<title>Workbench</title>
 
 		<@css.bundle theme="black" alternateTheme="red" @/>
 
